--- a/bingo.html
+++ b/bingo.html
@@ -13,6 +13,7 @@
         width: 460px;
         height: 460px;
         border: 1px solid black;
+        background-color: beige;
     }
 
     .board div {
