--- a/bingo.html
+++ b/bingo.html
@@ -13,7 +13,7 @@
         width: 460px;
         height: 460px;
         border: 1px solid black;
-        background-color: beige;
+        background-color: rgb(243, 243, 191);
     }
 
     .board div {
